--- a/views/landing-2.mustache
+++ b/views/landing-2.mustache
@@ -50,6 +50,11 @@
       .timeline .media:last-child:after {
         background-color: transparent;
       }
+
+      .btn-get-started {
+        width: 100%;
+        border-radius: 4px;
+      }
 		</style>
 </head>
     <body>
@@ -108,7 +113,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-10 mx-auto">
-                        <h1 class="dot-circle">Build fully featured, professional websites in minutes.</h1>
+                        <h1 class="dot-circle">Create Professional Websites in Minutes.</h1>
                         <div class="row mt-6">
                             <div class="col-sm-6 mb-5">
                                 <div class="media">
@@ -195,14 +200,10 @@
                 <div class="row mt-4">
                   <div class="col-md-8 mx-auto text-center">
                     <iframe width="100%" height="400" src="https://www.youtube.com/embed/1NY1rqokhLg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <a href="/templates" class="btn btn-primary btn-lg page-scroll btn-get-started mt-4">Get Started</a>
               		</div>
               	</div>
 
-                <div class="row mt-4">
-                    <div class="col-md-6 mx-auto text-center">
-                        <a href="/templates" class="btn btn-primary btn-lg page-scroll">Get Started</a>
-                    </div>
-                </div>
             </div>
         </section>
 
@@ -245,10 +246,10 @@
                 <div class="row mt-7">
                     <div class="col-md-8 mx-auto slick-users">
                         <div class="review text-center">
-                            <p class="quote">Praesent vulputate dolor velit, in condimentum odio pellentesin condimentum odio pellentesque libero.</p>
+                            <p class="quote">With little technical knowledge, Vertex360 made it incredibly easy to get my music site with a few short clicks.</p>
                             <div class="mt-4 d-flex flex-row align-items-center justify-content-center">
-                                <img src="https://lh3.googleusercontent.com/l6J-ahp4zmpja7KhkObbcmab5FaMZ5q3QiYNhIaxbryKm3hVSfkiwLCQDsxAmotOdOCfN2yTd4nISUYa8d67CGz5mQ" class="img-review rounded-circle mr-2" alt="Client 1"/>
-                                <span class="text-muted">Ryan Siddle, Google Design</span>
+                                <img src="https://lh3.googleusercontent.com/LqQczCfddrDtXWWSWai_NMj9Ufj3nMgx2nVuX2fUjsmg_LGC0DxqnXtVGB0iPVHakbcPDn3H8CpSJeJdwdi0DFK0" class="img-review rounded-circle mr-2" alt="Vertex 360"/>
+                                <span class="text-muted">Michael Kozma,</span><a style="color:red;margin-left:4px" target="_blank" href="https://www.kozmonautstudios.com/">Kozmanaut Studios</a>
                             </div>
                         </div>
                         <div class="review text-center">
@@ -276,13 +277,12 @@
                     <div class="col-md-7 mx-auto text-center">
                         <h1>How It Works</h1>
                         <p class="lead text-muted">
-                            Donec lacus enim, ullamcorper nec lectus id, ornare finibus nunc.
-                            Eleifend option congue nihil imper.
+                            The Vertex 360 workflow is a no-BS process,<br />just launch your site and go.
                         </p>
                     </div>
                 </div>
                 <div class="row mt-5">
-                    <div class="col-md-7 mx-auto timeline">
+                    <div class="col-md-6 timeline">
                         <div class="media pb-5">
                             <div class="icon-box mt-1">
                                 <div class="icon-box-inner small-xs text-primary">
@@ -316,20 +316,24 @@
                                 <p class="text-muted">That's it! Get back to doing what you do best - growing your business.</p>
                             </div>
                         </div>
-
                     </div>
+
+                    <div class="col-md-6">
+                      <img style="max-width:100%" src="https://lh3.googleusercontent.com/Er12rzFFB31q-4s9Gkyug6oSKAsswcpkbH183WPmp0XvPjNSplCTvLl45NMM5VaOQ-LzjkCZWNNXNGAMXkQ9PQZ-xQ" />
+                    </div>
+
                 </div>
             </div>
         </section>
 
         <!--pricing section-->
-        <section class=" pt-6" id="pricing">
+        <section style="background:#f9f9f9" class="pt-6" id="pricing">
             <div class="container">
                 <div class="row">
                     <div class="col-md-10 mx-auto">
                         <h1 class="dot-circle">Affordable Pricing.</h1>
                         <p class="text-muted lead">Go ahead and compare our prices to the other website builders.<br />We'll be right here when you get back.</p>
-                        <div class="row pricing-table mt-5">
+                        <div class="row pricing-table mt-5 mb-6">
                             <div class="col-sm-5">
                                 <ul class="list-unstyled pricing-list">
                                     <li>
@@ -349,8 +353,8 @@
                             <div class="col-sm-6 ml-auto bg-primary">
                                 <div class="card">
                                     <div class="card-body text-center">
-                                        <p class="h1 text-white">$59</p>
-                                        <p class="text-light">One time payment</p>
+                                        <p class="h1 text-white">$12</p>
+                                        <p class="text-light">Per Month</p>
                                     </div>
                                 </div>
                             </div>
@@ -361,37 +365,32 @@
         </section>
 
         <!--help section-->
-        <section class=" mt-7" id="contact">
+        <section class="mt-5" id="contact">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-10 mx-auto">
-                        <h2 class="dot-circle">Any Questions?</h2>
-                        <div class="row mt-5">
-                            <div class="col-md-6 mb-5">
-                                <h6>Can I try Snap for free?</h6>
-                                <p class="text-muted">Nam liber tempor cum soluta nobis eleifend option congue nihil imper per tem por legere me doming.</p>
-                            </div>
-                            <div class="col-md-6 mb-5">
-                                <h6>Do you have hidden fees?</h6>
-                                <p class="text-muted">Nam liber tempor cum soluta nobis eleifend option congue nihil imper per tem por legere me doming.</p>
-                            </div>
-                            <div class="col-md-6 mb-5">
-                                <h6>What are the payment methods you accept?</h6>
-                                <p class="text-muted">Nam liber tempor cum soluta nobis eleifend option congue nihil imper per tem por legere me doming.</p>
-                            </div>
-                            <div class="col-md-6 mb-5">
-                                <h6>How often do you release updates?</h6>
-                                <p class="text-muted">Nam liber tempor cum soluta nobis eleifend option congue nihil imper per tem por legere me doming.</p>
-                            </div>
-                            <div class="col-md-6 mb-5">
-                                <h6>What is your refund policy?</h6>
-                                <p class="text-muted">Nam liber tempor cum soluta nobis eleifend option congue nihil imper per tem por legere me doming.</p>
-                            </div>
-                            <div class="col-md-6 mb-5">
-                                <h6>How can I contact you?</h6>
-                                <p class="text-muted">Nam liber tempor cum soluta nobis eleifend option congue nihil imper per tem por legere me doming.</p>
-                            </div>
-                        </div>
+                    <div class="col-md-4 mx-auto">
+                      <div class="text-center">
+                        <h2>Join Free</h2>
+                        <p class="text-muted lead">Go ahead and compare our prices to the other website builders.</p>
+                      </div>
+
+                      <form>
+                          <div class="row">
+                              <div class="col-12">
+                                  <div class="form-group">
+                                    <input type="text"  class="form-control" placeholder="Email">
+                                  </div>
+                              </div>
+                              <div class="col-12">
+                                  <div class="form-group">
+                                    <input type="text"  class="form-control" placeholder="Password">
+                                  </div>
+                              </div>
+                          </div>
+                          <div class="text-center mt-3">
+                              <button class="btn btn-primary">SIGN UP</button>
+                          </div>
+                      </form>
                     </div>
                 </div>
             </div>
