--- a/views/landing-2.mustache
+++ b/views/landing-2.mustache
@@ -18,12 +18,12 @@
 
 
     <!--Inter UI font-->
-    <link href="https://rsms.me/inter/inter-ui.css" rel="stylesheet">
+    <link href="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/snap/css/inter-ui.css" rel="stylesheet">
 
     <!--vendors styles-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css">
+    <link rel="stylesheet" href="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/snap/css/slick.min.css">
+    <link rel="stylesheet" href="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/snap/css/slick-theme.min.css">
 
     <!-- Bootstrap CSS / Color Scheme -->
     <link rel="stylesheet" href="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/snap/css/blue.css" id="theme-color">
@@ -237,7 +237,7 @@
                     <div class="col-md-6 my-md-auto">
                         <h1>Fully Featured</h1>
                         <p class="text-muted lead">
-                            Our simplicty doesn't come at the expense of features. Every Vertex 360 site comes equipped with a full content management system, SSL integration, mobile responsiveness, and more.
+                            Our simplicty doesn't come at the expense of features. Every Vertex 360 site comes equipped with a full content management system (for blogs, newsletter subscribers, etc), SSL integration, mobile responsiveness, and more.
                         </p>
                         <a href="#" class="btn btn-primary">Learn more</a>
                     </div>
@@ -437,11 +437,11 @@
 
 
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.5.0/feather.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+        <script src="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/snap/js/jquery-3.2.1.min.js"></script>
+        <script src="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/snap/js/popper.min.js"></script>
+        <script src="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/snap/js/bootstrap.min.js"></script>
+        <script src="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/snap/js/feather.min.js"></script>
+        <script src="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/snap/js/slick.min.js"></script>
         <script src="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/snap/js/scripts.js"></script>
     </body>
 </html>
