--- a/views/landing-2.mustache
+++ b/views/landing-2.mustache
@@ -124,7 +124,9 @@
                                     </div>
                                     <div class="media-body">
                                         <h5 class="mt-0">No Coding</h5>
-                                        <span class="text-muted">Nam liber tempor cum soluta nobis eleifend option congue nihil imper per tem por legere me doming.</span>
+                                        <span class="text-muted">
+                                          Our easy-to-use website builder is simple, visually-based, and robust. Never touch a line of code, unless you want to.
+                                        </span>
                                     </div>
                                 </div>
                             </div>
@@ -137,7 +139,9 @@
                                     </div>
                                     <div class="media-body">
                                         <h5 class="mt-0">Professional Templates</h5>
-                                        <span class="text-muted">Nam liber tempor cum soluta nobis eleifend option congue nihil imper per tem por legere me doming.</span>
+                                        <span class="text-muted">
+                                          Our growing list of templates are more than just static sites. They are fully functional websites with blogs, newsletter registrations, and more.
+                                        </span>
                                     </div>
                                 </div>
                             </div>
@@ -150,7 +154,9 @@
                                     </div>
                                     <div class="media-body">
                                         <h5 class="mt-0">Content Management System</h5>
-                                        <span class="text-muted">Nam liber tempor cum soluta nobis eleifend option congue nihil imper per tem por legere me doming.</span>
+                                        <span class="text-muted">
+                                          Whether you need a blog, email subscriber list, a showcase page for your design portfolio or more, the Vertex 360 CMS has it covered.
+                                        </span>
                                     </div>
                                 </div>
                             </div>
@@ -162,8 +168,10 @@
                                         </div>
                                     </div>
                                     <div class="media-body">
-                                        <h5 class="mt-0">Custom Domain</h5>
-                                        <span class="text-muted">Nam liber tempor cum soluta nobis eleifend option congue nihil imper per tem por legere me doming.</span>
+                                        <h5 class="mt-0">Automatic SSL</h5>
+                                        <span class="text-muted">
+                                          In today's tech environment, security issues are non-negotiable. All Vertex 360 sites come equipped with automatic SSL certificates.
+                                        </span>
                                     </div>
                                 </div>
                             </div>
@@ -176,7 +184,9 @@
                                     </div>
                                     <div class="media-body">
                                         <h5 class="mt-0">Collaborate</h5>
-                                        <span class="text-muted">Nam liber tempor cum soluta nobis eleifend option congue nihil imper per tem por legere me doming.</span>
+                                        <span class="text-muted">
+                                          Working with clients who need websites? Launch it on Vertex 360 and add them as admins on their sites.
+                                        </span>
                                     </div>
                                 </div>
                             </div>
@@ -189,7 +199,9 @@
                                     </div>
                                     <div class="media-body">
                                         <h5 class="mt-0">Download Source Code</h5>
-                                        <span class="text-muted">Nam liber tempor cum soluta nobis eleifend option congue nihil imper per tem por legere me doming.</span>
+                                        <span class="text-muted">
+                                          If you prefer to dive into the code, download it from the admin console and dig in! All Vertex 360 sites are built in <a style="color:red" target="_blank" href="https://nodejs.org/en/">Node</a> &amp; <a style="color:red" href="https://expressjs.com/">Express JS</a>. 
+                                        </span>
                                     </div>
                                 </div>
                             </div>
