--- a/views/landing-2.mustache
+++ b/views/landing-2.mustache
@@ -55,6 +55,11 @@
         width: 100%;
         border-radius: 4px;
       }
+
+      .bg-green {
+        background: #56b48c;
+        border-color: #56b48c;
+      }
 		</style>
 </head>
     <body>
@@ -97,7 +102,7 @@
                     <div class="col-md-6 my-md-auto mb-5 mb-md-0 text-center text-md-left">
                         <span class="text-uppercase text-muted small-xl">Welcome to Vertex 360</span>
                         <h1 class="display-4 mt-2 mb-5">The Easiest Website Builder. Period.</h1>
-                        <a href="/templates" class="btn btn-primary d-inline-flex flex-row align-items-center text-white btn-lg">
+                        <a href="/templates" class="btn btn-primary d-inline-flex flex-row align-items-center text-white btn-lg bg-green">
                             Get Started
                         </a>
                     </div>
@@ -200,7 +205,7 @@
                                     <div class="media-body">
                                         <h5 class="mt-0">Download Source Code</h5>
                                         <span class="text-muted">
-                                          If you prefer to dive into the code, download it from the admin console and dig in! All Vertex 360 sites are built in <a style="color:red" target="_blank" href="https://nodejs.org/en/">Node</a> &amp; <a style="color:red" href="https://expressjs.com/">Express JS</a>. 
+                                          If you prefer to dive into the code, download it from the admin console and dig in! All Vertex 360 sites are built in <a style="color:red" target="_blank" href="https://nodejs.org/en/">Node</a> &amp; <a style="color:red" href="https://expressjs.com/">Express JS</a>.
                                         </span>
                                     </div>
                                 </div>
@@ -212,7 +217,7 @@
                 <div class="row mt-4">
                   <div class="col-md-8 mx-auto text-center">
                     <iframe width="100%" height="400" src="https://www.youtube.com/embed/1NY1rqokhLg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <a href="/templates" class="btn btn-primary btn-lg page-scroll btn-get-started mt-4">Get Started</a>
+                    <a href="/templates" class="btn btn-primary btn-lg page-scroll btn-get-started bg-green mt-4">Get Started</a>
               		</div>
               	</div>
 
@@ -229,7 +234,7 @@
                         <p class="text-muted lead">
 														Simply input your content and walk away - no coding required! No messing with confusing editors, drag & drop tools, or ridiculously complicated features for "beginners". On Vertex 360, simply input your content and move on with your life, business, family - more important stuff
                         </p>
-                        <a href="#" class="btn btn-primary">Learn more</a>
+                        <a href="#" class="btn btn-primary bg-green">Learn more</a>
                     </div>
                     <div class="col-md-6 order-1 order-md-2">
                         <div class="text-center">
@@ -251,7 +256,7 @@
                         <p class="text-muted lead">
                             Our simplicty doesn't come at the expense of features. Every Vertex 360 site comes equipped with a full content management system (for blogs, newsletter subscribers, etc), SSL integration, mobile responsiveness, and more.
                         </p>
-                        <a href="#" class="btn btn-primary">Learn more</a>
+                        <a href="#" class="btn btn-primary bg-green">Learn more</a>
                     </div>
                 </div>
 
