--- a/views/template2.mustache
+++ b/views/template2.mustache
@@ -75,6 +75,7 @@
       .btn-get-started {
         width: 100%;
         border-radius: 4px;
+        padding: 12px 11em;
       }
 
       .bg-green {
@@ -138,7 +139,7 @@
                           </a>
                           {{/template.images}}
 
-                          <a href="/templates" class="btn btn-primary d-inline-flex flex-row align-items-center text-white btn-lg bg-green">
+                          <a href="/templates" class="btn btn-primary d-inline-flex flex-row align-items-center text-white btn-lg btn-get-started bg-green">
                               Launch This Template
                           </a>
                         </div>
