max width for screenshot

--- a/views/template2.mustache
+++ b/views/template2.mustache
@@ -67,6 +67,7 @@
 
       .screenshot {
         margin-bottom: 24px;
+        max-width: 100%;
         border: 1px solid #ddd;
         padding: 3px;
         background: #fff;
