padding for mobile size

--- a/views/template2.mustache
+++ b/views/template2.mustache
@@ -73,16 +73,23 @@
         background: #fff;
       }
 
+      .bg-green {
+        background: #56b48c;
+        border-color: #56b48c;
+      }
+
       .btn-get-started {
         width: 100%;
         border-radius: 4px;
         padding: 12px 11em;
       }
 
-      .bg-green {
-        background: #56b48c;
-        border-color: #56b48c;
+      @media (max-width: 768px) {
+        .btn-get-started {
+          padding: 12px 5.5em;
+        }
       }
+
 		</style>
 </head>
     <body>
