head tag for template page

--- a/views/template2.mustache
+++ b/views/template2.mustache
@@ -4,17 +4,17 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Vertex 360 | Powerful Website Builder. Easy, Fast, Professional.</title>
-    <meta name="description" content="Vertex 360 is a powerful, fully featured, easy website builder made for busy people. Create your website in under an hour by selecting one of our professional templates and simply updating it with your content. No more messing with confusing editors, drag & drop tools, or ridiculously complicated features for 'beginners'. On Vertex 360, simply input your text and images and move on with your life, business, family - the important stuff." />
+    <title>{{template.name}}</title>
+    <meta name="description" content="{{template.description}}" />
     <link rel="icon" href="https://lh3.googleusercontent.com/5SVrpLI9utkuVJbQb48cpD3tar59mgWaWSAM73Ghj8dxFJMD2UOzkhO5ptWDd2uV2eqgSvDCSa-Ad8aOrygXx6nv=s32-c" type="image/png" />
 
-    <meta property="og:title" content="Vertex 360 | Powerful Website Builder. Easy, Fast, Professional." />
+    <meta property="og:title" content="Vertex 360 | {{template.name}}" />
   	<meta property="og:type" content="article" />
-  	<meta property="og:url" content="https://www.vertex360.co" />
-  	<meta property="og:image" content="https://lh3.googleusercontent.com/ZM_FCvAPcwUXd3NZJNpvA-t8jb4RQkkjVAKNXYk_SQHV155T-W36Ghos9W7iiTyxaiKzXl9Z2XhaABotatD3HomhAQ=s260-c" />
+  	<meta property="og:url" content="https://www.vertex360.co/template/{{template.slug}}" />
+  	<meta property="og:image" content="{{{template.image}}}=s260-c" />
   	<meta property="og:image:width" content="260px" />
   	<meta property="og:image:height" content="260px" />
-  	<meta property="og:description" content="Vertex 360 is a powerful, fully featured, easy website builder made for busy people. Create your website in under an hour by selecting one of our professional templates and simply updating it with your content. No more messing with confusing editors, drag & drop tools, or ridiculously complicated features for 'beginners'. On Vertex 360, simply input your text and images and move on with your life, business, family - the important stuff." />
+  	<meta property="og:description" content="{{template.description}}" />
 
 
     <!--Inter UI font-->
