--- a/views/template2.mustache
+++ b/views/template2.mustache
@@ -130,7 +130,7 @@
         <section class="py-6" id="features" style="background:#f9f9f9">
             <div class="container mt-4">
                 <div class="row">
-                    <div class="col-md-8 mx-auto">
+                    <div class="col-md-10 col-lg-8 mx-auto">
                         <div class="template-header">
                           <h1>{{template.name}} Template</h1>
                           <img class="icon-avatar" src="{{{template.profile.image}}}=s34-c" />
