--- a/views/blog2.mustache
+++ b/views/blog2.mustache
@@ -107,7 +107,7 @@
         <section class="py-6" id="features" style="background:#f9f9f9">
             <div class="container mt-4">
                 <div class="row">
-                    <div class="col-md-8 mx-auto">
+                    <div class="col-md-10 col-lg-8 mx-auto">
                         <div class="post-header">
                           <h1>{{post.title}}</h1>
                           <img class="icon-avatar" src="{{{post.author.image}}}=s34-c" />
