--- a/views/templates2.mustache
+++ b/views/templates2.mustache
@@ -133,11 +133,11 @@
                     {{#templates}}
                     <div class="col-md-4">
                       <div class="card mb-4" style="border-radius:3px">
-                        <div style="padding:16px">
-                          <h3><a href="/template/{{slug}}">{{name}}</a></h3>
+                        <div style="padding:12px">
+                          <h3 style="margin-bottom:0px"><a href="/template/{{slug}}">{{name}}</a></h3>
                         </div>
                         <a href="/template/{{slug}}">
-                          <img src="{{{image}}}=s256-c" />
+                          <img style="width:100%" src="{{{image}}}=s512-c" />
                         </a>
                         <a href="/template/{{slug}}">View More</a>
                       </div>
