--- a/views/landing-2.mustache
+++ b/views/landing-2.mustache
@@ -381,44 +381,7 @@
             </div>
         </section>
 
-        <!--help section-->
-        <section class="mt-5" id="contact">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-5 mx-auto">
-                      <div class="card" style="padding:28px;background:#f9f9f9">
-                        <div class="text-center">
-                          <h1>Join Free</h1>
-                          <p class="text-muted lead">
-                            Join today and launch your first website for free. This is not trial period - your first site is free forever!
-                          </p>
-                        </div>
-
-                        <form class="py-4">
-                            <div class="row">
-                                <div class="col-12">
-                                    <div class="form-group">
-                                      <input type="text"  class="form-control" placeholder="Email">
-                                    </div>
-                                </div>
-                                <div class="col-12">
-                                    <div class="form-group">
-                                      <input type="text"  class="form-control" placeholder="Password">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="text-center mt-3">
-                                <button class="btn btn-primary mb-4">SIGN UP</button><br />
-                                <img src="https://lh3.googleusercontent.com/hlcLdauNL9UiLa3K4wF5ZPNpHzi50R26y61Ahx7oRMbUNgujN-1SmeC_3zG4EHLBH5WnRhQ1ZS19KF_xcWqkTKoENw=s180" />
-                            </div>
-                        </form>
-
-                      </div>
-
-                    </div>
-                </div>
-            </div>
-        </section>
+        {{>register}}
 
         <footer class="py-6 bg-light mt-5">
             <div class="container">
