--- a/views/landing-2.mustache
+++ b/views/landing-2.mustache
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Vertex 360 | Powerful Website Builder. Easy, Fast, Professional.</title>
+    <title>Vertex 360 | The Easiest Website Builder. Period.</title>
     <meta name="description" content="Vertex 360 is a powerful, fully featured, easy website builder made for busy people. Create your website in under an hour by selecting one of our professional templates and simply updating it with your content. No more messing with confusing editors, drag & drop tools, or ridiculously complicated features for 'beginners'. On Vertex 360, simply input your text and images and move on with your life, business, family - the important stuff." />
     <link rel="icon" href="https://lh3.googleusercontent.com/5SVrpLI9utkuVJbQb48cpD3tar59mgWaWSAM73Ghj8dxFJMD2UOzkhO5ptWDd2uV2eqgSvDCSa-Ad8aOrygXx6nv=s32-c" type="image/png" />
 
@@ -59,6 +59,23 @@
       .bg-green {
         background: #56b48c;
         border-color: #56b48c;
+      }
+
+      .price-card {
+        border-radius:4px;
+      }
+
+      .price-card-body {
+        padding:2rem;
+        background:#fff;
+        text-align:center;
+      }
+
+      .price-card-body ul {
+        list-style-type:none;
+        padding-left:16px;
+        font-size:18px;
+        line-height:32px
       }
 		</style>
 </head>
@@ -308,7 +325,7 @@
                             </div>
                             <div class="media-body">
                                 <h5>Choose a Template</h5>
-                                <p class="text-muted">Select from our growing list of professional templates across several industries.</p>
+                                <p class="text-muted">Select from our growing list of professional templates across several industries. <a style="color:red;box-shadow:none" href="/templates">View templates</a>.</p>
                             </div>
                         </div>
                         <div class="media pb-5">
@@ -347,34 +364,52 @@
         <section style="background:#f9f9f9" class="pt-6" id="pricing">
             <div class="container">
                 <div class="row">
+                    <div class="col-md-7 mx-auto text-center">
+                      <h1>Affordable Pricing.</h1>
+                      <p class="text-muted lead">Go ahead and compare our prices to the other website builders.<br />We'll be right here when you get back.</p>
+                    </div>
+                </div>
+
+                <div class="row">
                     <div class="col-md-10 mx-auto">
-                        <h1 class="dot-circle">Affordable Pricing.</h1>
-                        <p class="text-muted lead">Go ahead and compare our prices to the other website builders.<br />We'll be right here when you get back.</p>
                         <div class="row pricing-table mt-5 mb-6">
-                            <div class="col-sm-5">
-                                <ul class="list-unstyled pricing-list">
-                                    <li>
-                                        <h5>Pay once</h5>
-                                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                    </li>
-                                    <li>
-                                        <h5>One plan</h5>
-                                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                    </li>
-                                    <li>
-                                        <h5>Unlimited access</h5>
-                                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="col-sm-6 ml-auto bg-primary">
-                                <div class="card">
-                                    <div class="card-body text-center">
-                                        <p class="h1 text-white">$12</p>
-                                        <p class="text-light">Per Month</p>
+
+                          <div class="col-lg-5 mx-auto">
+                              <div class="card price-card">
+                                  <div class="card-body text-center" style="padding:2.5rem 2rem;background:#56b48c">
+                                    <h1 class="text-white">Free</h1>
+                                    <p class="text-light" style="font-weight:200">Forever</p>
+                                  </div>
+                                  <div class="price-card-body">
+                                    <ul>
+                                      <li>One Site</li>
+                                      <li>Built-in CMS</li>
+                                      <li><strike>Automatic SSL</strike></li>
+                                      <li><strike>Custom Domain</strike></li>
+                                      <li>$5 per Additional Site</li>
+                                    </ul>
+                                  </div>
+                              </div>
+                          </div>
+
+                            <div class="col-lg-5 mx-auto">
+                              <div class="card" style="border-radius:4px">
+                                    <div class="card-body text-center" style="padding:2.5rem 2rem">
+                                        <h1 class="text-white">$12</h1>
+                                        <p class="text-light" style="font-weight:200">Per Month</p>
+                                    </div>
+                                    <div class="price-card-body">
+                                      <ul>
+                                        <li><strong>5 Sites</strong></li>
+                                        <li>Built-in CMS</li>
+                                        <li>Automatic SSL</li>
+                                        <li>Custom Domain</li>
+                                        <li>$5 per Additional Site</li>
+                                      </ul>
                                     </div>
                                 </div>
                             </div>
+
                         </div>
                     </div>
                 </div>
