--- a/views/partials/register.mustache
+++ b/views/partials/register.mustache
@@ -14,17 +14,22 @@
                     <div class="row">
                         <div class="col-12">
                             <div class="form-group">
-                              <input type="text"  class="form-control" placeholder="Email">
+                              <input id="input-register-name" type="text"  class="form-control" placeholder="Full Name">
                             </div>
                         </div>
                         <div class="col-12">
                             <div class="form-group">
-                              <input type="text"  class="form-control" placeholder="Password">
+                              <input id="input-register-email" type="text"  class="form-control" placeholder="Email">
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="form-group">
+                              <input id="input-register-password" type="password"  class="form-control" placeholder="Password">
                             </div>
                         </div>
                     </div>
                     <div class="text-center mt-3">
-                        <button class="btn btn-primary mb-4">SIGN UP</button><br />
+                        <button id="input-register" class="btn btn-primary mb-4">SIGN UP</button><br />
                         <img src="https://lh3.googleusercontent.com/hlcLdauNL9UiLa3K4wF5ZPNpHzi50R26y61Ahx7oRMbUNgujN-1SmeC_3zG4EHLBH5WnRhQ1ZS19KF_xcWqkTKoENw=s180" />
                     </div>
                 </form>
