--- a/views/landing-2.mustache
+++ b/views/landing-2.mustache
@@ -18,15 +18,12 @@
 
 
     <!--Inter UI font-->
-    <link href="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/snap/css/inter-ui.css" rel="stylesheet">
+    <link href="{{{cdn}}}/snap/css/inter-ui.css" rel="stylesheet">
 
-    <!--vendors styles-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/snap/css/slick.min.css">
-    <link rel="stylesheet" href="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/snap/css/slick-theme.min.css">
-
-    <!-- Bootstrap CSS / Color Scheme -->
-    <link rel="stylesheet" href="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/snap/css/blue.css" id="theme-color">
+    <link rel="stylesheet" href="{{{cdn}}}/snap/css/slick.min.css">
+    <link rel="stylesheet" href="{{{cdn}}}/snap/css/slick-theme.min.css">
+    <link rel="stylesheet" href="{{{cdn}}}/snap/css/blue.css" id="theme-color">
 		<style>
 			.logo {
 				width: 160px;
@@ -488,13 +485,13 @@
         <script type="text/javascript" src="https://js.stripe.com/v3/"></script>
 
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script src="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/snap/js/jquery-3.2.1.min.js"></script>
-        <script src="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/snap/js/popper.min.js"></script>
-        <script src="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/snap/js/bootstrap.min.js"></script>
-        <script src="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/snap/js/feather.min.js"></script>
-        <script src="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/snap/js/slick.min.js"></script>
-        <script src="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/snap/js/scripts.js"></script>
-        <script src="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/scripts/auth.js"></script>
+        <script src="{{{cdn}}}/snap/js/jquery-3.2.1.min.js"></script>
+        <script src="{{{cdn}}}/snap/js/popper.min.js"></script>
+        <script src="{{{cdn}}}/snap/js/bootstrap.min.js"></script>
+        <script src="{{{cdn}}}/snap/js/feather.min.js"></script>
+        <script src="{{{cdn}}}/snap/js/slick.min.js"></script>
+        <script src="{{{cdn}}}/snap/js/scripts.js"></script>
+        <script src="{{{cdn}}}/scripts/auth.js"></script>
         <script>
           (function(){
             var data = window.__PRELOADED__
