border bottom on nav

--- a/views/landing-2.mustache
+++ b/views/landing-2.mustache
@@ -78,7 +78,7 @@
 </head>
     <body>
 				<!--navigation-->
-				<nav style="height:72px" class="navbar navbar-expand-md navbar-light bg-white fixed-top sticky-navigation">
+				<nav style="height:72px;border-bottom:1px solid #ddd" class="navbar navbar-expand-md navbar-light bg-white fixed-top sticky-navigation">
 				  <div class="container">
 				    <a class="navbar-brand mx-auto" href="/">
 				        <img class="logo" src="https://lh3.googleusercontent.com/hlcLdauNL9UiLa3K4wF5ZPNpHzi50R26y61Ahx7oRMbUNgujN-1SmeC_3zG4EHLBH5WnRhQ1ZS19KF_xcWqkTKoENw=s320" />
