--- a/views/landing-2.mustache
+++ b/views/landing-2.mustache
@@ -90,16 +90,13 @@
 				    <div class="collapse navbar-collapse" id="navbarCollapse">
 				        <ul class="navbar-nav ml-auto">
 				            <li class="nav-item">
-				                <a class="nav-link page-scroll" href="#about">About</a>
+				                <a class="nav-link page-scroll" href="/">Home</a>
 				            </li>
 				            <li class="nav-item">
-				                <a class="nav-link page-scroll" href="#services">Services</a>
+				                <a class="nav-link page-scroll" href="/templates">Templates</a>
 				            </li>
 				            <li class="nav-item">
-				                <a class="nav-link page-scroll" href="#process">Templates</a>
-				            </li>
-				            <li class="nav-item">
-				                <a class="nav-link page-scroll" href="#blog">Blog</a>
+				                <a class="nav-link page-scroll" href="/blog">Blog</a>
 				            </li>
                     <li id="login-container" class="nav-item">
 				                <a style="border-radius:6px;color:#fff" class="nav-link page-scroll btn btn-primary" href="#">Join</a>
